--- a/styles/cat.css
+++ b/styles/cat.css
@@ -163,3 +163,27 @@ body {
 
 }
 
+@media(max-width:600px) {
+
+    .med3{
+        font-size: 2.5rem;
+    }
+    .med4 {
+        font-size: 2rem;
+        text-align: center;
+    }
+    
+}
+
+@media(max-width:400px) {
+
+    .med3{
+        font-size: 2rem;
+    }
+    .med4 {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+    
+}
+
