--- a/styles/style.css
+++ b/styles/style.css
@@ -477,7 +477,7 @@ footer p {
   header #menu {
     display: block;
     color: #14A1E8;
-    font-size: 6vw;
+    font-size: 5rem;
   }
 
   header nav {
